Recover basic dialogs for auth process

--- a/webapp/front/front/src/app/modules/auth/login/login.component.html
+++ b/webapp/front/front/src/app/modules/auth/login/login.component.html
@@ -1,7 +1,6 @@
 
 
 
-
 <!--
 <c:if test="${error == true}">
   <c:set var="errorMessage">
@@ -58,21 +57,26 @@
 
 <div class="content-container ">
   <div class="container f-c-c-c" style="z-index: 2">
-  <landing-page-navbar></landing-page-navbar>
-  <div class="landing-neibo ">
+    <landing-page-navbar></landing-page-navbar>
+    <div class="landing-neibo ">
       neibo
     </div>
     <p class="landing-description" style="mix-blend-mode: screen" i18n>A platform for gated communities that allows you to share news, book courts, and stay connected with your neighbors at all times.</p>
 
-    <a class="action-button font-weight-bolder" onclick="openLoginDialog()" i18n>
+    <a class="action-button font-weight-bolder"
+       (click)="openLoginDialog()"
+       i18n>
       Login
     </a>
     <span style="color:var(--lighttext); font-size: 14px; mix-blend-mode: screen">
             <span i18n>Not a member?</span>
-            <a onclick="" class="a-link" i18n>
+            <a (click)="openSignupDialog()" class="a-link" i18n>
                 Signup now
             </a>
     </span>
+
+    <login-dialog [(showLoginDialog)]="showLoginDialog" [(showSignupDialog)]="showSignupDialog"></login-dialog>
+    <signup-dialog [(showSignupDialog)]="showSignupDialog"></signup-dialog>
 
     <!--
     <%&#45;&#45; Login dialog&#45;&#45;%>
@@ -100,10 +104,10 @@
     </c:if>-->
   </div>
 
-  <app-background-drawing></app-background-drawing>
 
 </div>
 
+<app-background-drawing></app-background-drawing>
 
 
 <!--
@@ -160,4 +164,3 @@
   }
 </script>
 -->
-
