--- a/webapp/front/front/src/app/components/auth-dialogs/signup-dialog/signup-dialog.component.html
+++ b/webapp/front/front/src/app/components/auth-dialogs/signup-dialog/signup-dialog.component.html
@@ -33,39 +33,41 @@
       </div>
     </div>
 
+
+    <!--NEIGHBOR SIGNUP FORM-->
     <div *ngIf="selectedOption === 'neighbor'">
-      <!--<form:form method="post" action="signup" modelAttribute="signupForm" id="signupForm">
-      <form:errors cssClass="error" element="p"/>
+      <form [formGroup]="signupForm" (ngSubmit)="trySignup()" id="signupForm">
 
       <div class="f-c-c-c pl-3 pr-3">
         <div class="form-input align-items-start " style="gap:5px; width: 200px">
-          <span class="font-weight-normal c-light-text ml-2"><spring:message code="Neighborhood"/></span>
-          <form:select path="neighborhoodId" class="cool-select">
-            <c:forEach var="entry" items="${neighborhoodsList}">
-              <form:option value="${entry.getNeighborhoodId()}"><c:out
-                value="${entry.getName()}"/></form:option>
-            </c:forEach>
-          </form:select>
-          <form:errors path="neighborhoodId" cssClass="landing-error" element="p"/>
+          <span class="font-weight-normal c-light-text ml-2">Neighborhood</span>
+          <select  class="cool-select">
+            <select formControlName="neighborhoodId" class="cool-select">
+              <option *ngFor="let neib of neighborhoodsList" [value]="neib.neighborhoodId">
+                {{ neib.name }}
+              </option>
+            </select>
+          </select>
+          <small class="form-error"> *Entered email is not valid</small> <!--TODO-->
         </div>
         <div class="row w-100">
           <div class="col-6 pr-2">
             <div class="form-input">
-              <form:label path="name">
-                <c:set var="firstName"><spring:message code="First.name"/></c:set>
-                <form:input path="name" placeholder="${firstName}" class="input"/>
-              </form:label>
-              <form:errors path="name" cssClass="landing-error" element="p"/>
+              <label >
+                <input  placeholder="First name" i18n-placeholder class="input" formControlName="name"/>
+              </label>
+<!--TODO              <form:errors path="name" cssClass="landing-error" element="p"/>-->
             </div>
           </div>
 
           <div class="col-6 pl-2">
             <div class="form-input ">
-              <form:label path="surname">
-                <c:set var="surname"><spring:message code="Surname"/></c:set>
-                <form:input path="surname" placeholder="${surname}" class="input"/>
-              </form:label>
+              <label >
+                <input  placeholder="Surname" i18n-placeholder class="input" formControlName="surname"/>
+              </label>
+<!-- TODO
               <form:errors path="surname" cssClass="landing-error" element="p"/>
+-->
             </div>
           </div>
         </div>
@@ -73,72 +75,65 @@
           <div class="col-6 pr-2">
 
             <div class="form-input">
-              <form:label path="mail">
-                <c:set var="email"><spring:message code="Email"/></c:set>
-                <form:input path="mail" placeholder="${email}" class="input"/>
-              </form:label>
-              <form:errors path="mail" cssClass="landing-error" element="p"/>
+              <label >
+                <input  placeholder="Email" class="input" formControlName="mail"/>
+              </label>
+              <!--<form:errors path="mail" cssClass="landing-error" element="p"/> TODO-->
             </div>
           </div>
           <div class="col-6 pl-2">
 
             <div class="form-input">
-              <form:label path="password">
-                <c:set var="password"><spring:message code="Password"/></c:set>
-                <form:input type="password" path="password" autocomplete="true" placeholder="Password"
-                            class="input"/>
-              </form:label>
-              <form:errors path="password" cssClass="landing-error" element="p"/>
+              <label >
+                <input type="password"  autocomplete="true" placeholder="Password"
+                            class="input" formControlName="password"/>
+              </label>
+              <!--TODO <form:errors path="password" cssClass="landing-error" element="p"/>-->
             </div>
           </div>
         </div>
         <div class="row w-100">
           <div class="col-6 pr-2">
             <div class="form-input ">
-              <form:label path="identification">
-                <c:set var="identification"><spring:message code="Identification"/></c:set>
-
-                <form:input
+              <label>
+                <input
                   type="number"
                   pattern="[0-9]*"
                   inputmode="numeric"
                   min="1" max="99999999"
-                  path="identification"
-                  placeholder="${identification}"
+                  placeholder="Identification"
+                  formControlName="identification"
                   class="input"
                 />
-              </form:label>
-              <form:errors path="identification" cssClass="landing-error" element="p"/>
+              </label>
+             <!--TODO <form:errors path="identification" cssClass="landing-error" element="p"/>-->
             </div>
           </div>
           <div class="col-6 pl-2">
             <div class="form-input ">
-              <form:label path="language">
-                <form:select path="language" class="cool-select">
-                  <form:option value="English"><spring:message code="English"/></form:option>
-                  <form:option value="Spanish"><spring:message code="Spanish"/></form:option>
-                </form:select>
-              </form:label>
-              <form:errors path="language" cssClass="landing-error" element="p"/>
+              <label >
+                <select class="cool-select" formControlName="language">
+                  <option value="English">English</option>
+                  <option value="Spanish">Spanish</option>
+                </select>
+              </label>
+              <!--TODO <form:errors path="language" cssClass="landing-error" element="p"/>-->
             </div>
           </div>
         </div>
 
 
 
-        <button onclick="submitSignupForm()" class="action-button font-weight-bolder mt-3"><spring:message
-          code="Signup"/></button>
+        <button
+          type="submit"
+          [disabled]="signupForm.invalid"
+          class="action-button font-weight-bolder mt-3">
+          Sign up
+        </button>
 
       </div>
-      <div class="mt-3 mb-5">
-                <span style="color:var(&#45;&#45;lighttext); font-size: 14px;"><spring:message code="Worker.signup.question"/>
-                            <a onclick="closeSignupDialog(); openWorkerSignupDialog();" class="a-link"><spring:message
-                              code="Signup.here"/></a>
-                </span>
-      </div>
 
-    </form:form>-->
-      <p>Neighbor Form</p>
+    </form>
     </div>
 
     <div *ngIf="selectedOption === 'service'">
