--- a/webapp/front/front/src/assets/styles/home.css
+++ b/webapp/front/front/src/assets/styles/home.css
@@ -1145,7 +1145,7 @@ input[type=file]::file-selector-button:hover {
 /*-- loading --*/
 
 .loader-container {
-  display: none;
+  display: flex;
   position: fixed;
   top: 0;
   left: 0;
