--- a/webapp/front/front/src/assets/styles/landingPage.css
+++ b/webapp/front/front/src/assets/styles/landingPage.css
@@ -126,6 +126,32 @@
   justify-content: center;
 }
 
+input.ng-invalid.ng-touched {
+  border: 1px solid var(--error);
+  &:active,
+  &:hover,
+  &:focus-visible {
+    transform: translateY(-4px);
+    box-shadow: 4px 4px var(--error);
+  }
+}
+
+.form-error{
+  margin-left: 5px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: normal;
+  color: var(--error);
+  font-size: 12px;
+  margin-top: 5px;
+  &.centered{
+    justify-content: center;
+    margin: 0;
+  }
+}
 input[type="text"],
 input[type="number"],
 .input {
