--- a/webapp/front/front/src/app/components/left-column/left-column.component.html
+++ b/webapp/front/front/src/app/components/left-column/left-column.component.html
@@ -28,26 +28,27 @@
       <c:otherwise>-->
         <div class="left-box">
           <div class="f-c-c-c first">
-            <a id="announcementsButton" routerLink="/" [queryParams]="{channel: 'Announcements'}"
+            <a id="announcementsButton"
+               routerLink="/feed"  [queryParams]="{channel: 'Announcements'}"
                class="cool-left-button f-r-sb-c"
                [ngClass]="{ 'active': channelClass == 'Announcements' }">
               <i class="fas fa-bullhorn"></i>
               <span i18n>Announcements</span>
             </a>
-            <a id="feedButton" routerLink="/"
+            <a id="feedButton" routerLink="/feed"
                class="cool-left-button  f-r-sb-c"
                [ngClass]="{ 'active': channelClass == 'Feed' }">
               <i class="fas fa-comments"></i>
               <span i18n>Feed</span>
             </a>
-            <a id="complaintsButton" routerLink="/" [queryParams]="{channel: 'Complaints'}"
+            <a id="complaintsButton" routerLink="/feed" [queryParams]="{channel: 'Complaints'}"
                class="cool-left-button f-r-sb-c"
                [ngClass]="{ 'active': channelClass == 'Complaints' }">
               <i class="fas fa-envelope"></i>
               <span i18n>Complaints</span>
             </a>
         </div>
-        <div class="f-c-c-c second">
+            <div class="f-c-c-c second">
             <div class="divider"></div>
             <a id="marketplaceButton" routerLink="/marketplace"
                class="cool-left-button lila f-r-sb-c"
@@ -74,7 +75,7 @@
               <span i18n>Information</span>
             </a>
         </div>
-        
+
         </div>
 
       <!--</c:otherwise>
