--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -1,12 +1,11 @@
-
 <div id="blogpost-container" class="blogpost">
   <div class="container">
     <div class=" row ">
       <div class="col-md-1 grey-bg col-md-pull-1">
         <div class="f-c-c-c mt-3" style="gap: 1px">
-                    <span id="like-button-${param.postID}" class="like-button" data-post-id="${param.postID}">
-                        <i class="fa-solid fa-thumbs-up"></i>
-                    </span>
+          <span id="like-button-${param.postID}" class="like-button" data-post-id="${param.postID}">
+            <i class="fa-solid fa-thumbs-up"></i>
+          </span>
           <!-- <span class="like-count c-light-text" id="like-count-${param.postID}"
                 data-like-count="${param.postLikes}">
             {{post.likes.length}}
@@ -17,44 +16,43 @@
       </div>
       <div class="col-md-11 pt-3 pb-3 pr-3 col-md-push-11">
         <!--${pageContext.request.contextPath}/posts/<c:out value="${param.postID}" />-->
-        <a
-          [routerLink]="[post.self]"
-          style="text-decoration: none;">
-        <div class="post-header">
-          <div class="blogpost-author-and-date">
-            <div class="f-r-s-c placeholder-glow" style="gap: 3px">
-              <!--<img
+        <a [routerLink]="[post.self]" style="text-decoration: none;">
+          <div class="post-header">
+            <div class="blogpost-author-and-date">
+              <div class="f-r-s-c placeholder-glow" style="gap: 3px">
+                <!--<img
                 id="postUserProfilePictureId-${param.postID}"
                 src=""
                 class="small-profile-picture placeholder"
                 alt="profile_picture_img"
               />-->
 
-              <!--src="${pageContext.request.contextPath}/resources/js/fetchLibrary.js"-->
-              <!--<script src=""></script>-->
+                <!--src="${pageContext.request.contextPath}/resources/js/fetchLibrary.js"-->
+                <!--<script src=""></script>-->
 
-              <!--<script>
+                <!--<script>
                 (function () {
                   getImageInto("postUserProfilePictureId-${param.postID}", ${empty param.postUserProfilePictureId ? 0 : param.postUserProfilePictureId}, "${pageContext.request.contextPath}");
                 })();
               </script>-->
 
-              <span class="post-author pt-1 pb-1 pl-1">{{post.user.mail}}<!--<c:out value="${param.postNeighborMail}"/>--></span>
+                <span
+                  class="post-author pt-1 pb-1 pl-1">{{post.user.mail}}<!--<c:out value="${param.postNeighborMail}"/>--></span>
+
+              </div>
+
+              <div style="font-size: 12px;color: var(--lighttext);">
+                <span i18n>posted</span>
+                <!--<span class="post-date" data-post-date="{{post?.date}}"></span>-->
+
+              </div>
 
             </div>
-
-            <div style="font-size: 12px;color: var(--lighttext);">
-              <span i18n>posted</span>
-              <!--<span class="post-date" data-post-date="{{post?.date}}"></span>-->
-
-            </div>
-
+            <h1 class="post-title">{{post.title}}<!--<c:out value="${param.postTitle}"/>--></h1>
           </div>
-          <h1 class="post-title">{{post.title}}<!--<c:out value="${param.postTitle}"/>--></h1>
-        </div>
-        <p class="post-description mb-2">{{post.description}}<!--<c:out value="${param.postDescription}"/>--></p>
+          <p class="post-description mb-2">{{post.description}}<!--<c:out value="${param.postDescription}"/>--></p>
 
-         <!-- <div *ngIf="postImage">
+          <!-- <div *ngIf="postImage">
             <div style="display: flex; justify-content: center; align-items: center;">
               <img class="blogpost-image"
                    src="getImagePath(postImage)"
@@ -75,17 +73,15 @@
 
           <!-- Assuming postTags is an array property in your component -->
           <ng-container *ngFor="let tag of post.tags">
-            <a routerLink= "/" [queryParams]="{tag: tag.tag}"
-               class="post-tag static m-l-3 m-r-3"
-               >
-              {{ tag.tag }}
+            <a routerLink="/" [queryParams]="{tag: tag.name}" class="post-tag static m-l-3 m-r-3">
+              {{ tag.name}}
             </a>
           </ng-container>
 
           <!--<c:forEach var="postTag" items="${requestScope.postTags}">
-            <a href="${pageContext.request.contextPath}${contextPath}?tag=${postTag.tag}"
-               class="post-tag static m-l-3 m-r-3" data-post-tag="${postTag.tag}">
-              <c:out value="${postTag.tag}"/>
+            <a href="${pageContext.request.contextPath}${contextPath}?tag=${postTag.name}"
+               class="post-tag static m-l-3 m-r-3" data-post-tag="${postTag.name}">
+              <c:out value="${postTag.name}"/>
             </a>
           </c:forEach>-->
         </div>
@@ -172,4 +168,3 @@
 </script>-->
 
 <!--<script src="${pageContext.request.contextPath}/resources/js/dateFormatter.js"></script>-->
-
